Fixed function call optimization not processing numeric literal arguments in some cases.